RESOLVED FIXED165051
Fix exception scope verification failures in ObjectConstructor.cpp and ObjectPrototype.cpp.
https://bugs.webkit.org/show_bug.cgi?id=165051
Summary Fix exception scope verification failures in ObjectConstructor.cpp and Object...
Mark Lam
Reported 2016-11-23 13:53:23 PST
Patch coming.
Attachments
proposed patch. (30.27 KB, patch)
2016-11-23 14:00 PST, Mark Lam
buildbot: commit-queue-
Archive of layout-test-results from ews114 for mac-yosemite (1.63 MB, application/zip)
2016-11-23 15:08 PST, Build Bot
no flags
proposed patch + EWS failure fixed. (32.12 KB, patch)
2016-11-23 16:20 PST, Mark Lam
mark.lam: review-
proposed patch. (24.56 KB, patch)
2016-11-25 07:56 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2016-11-23 14:00:48 PST
Created attachment 295378 [details] proposed patch.
Build Bot
Comment 2 2016-11-23 15:08:24 PST
Comment on attachment 295378 [details] proposed patch. Attachment 295378 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2562237 New failing tests: http/tests/security/cross-frame-access-object-prototype.html
Build Bot
Comment 3 2016-11-23 15:08:27 PST
Created attachment 295380 [details] Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Mark Lam
Comment 4 2016-11-23 15:14:08 PST
Comment on attachment 295378 [details] proposed patch. Taking out of review while I investigate the test failure.
Mark Lam
Comment 5 2016-11-23 16:20:36 PST
Created attachment 295383 [details] proposed patch + EWS failure fixed.
Mark Lam
Comment 6 2016-11-24 13:38:50 PST
Comment on attachment 295383 [details] proposed patch + EWS failure fixed. It is invalid to replace returning encodedJSValue() with returning { }. On 32-bit builds, the former is non-zero, while the latter is 0. Will fix this patch.
Mark Lam
Comment 7 2016-11-25 07:56:27 PST
Created attachment 295423 [details] proposed patch.
Saam Barati
Comment 8 2016-11-28 14:04:53 PST
Comment on attachment 295423 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=295423&action=review > Source/WebCore/bindings/js/JSDOMWindowCustom.cpp:137 > + return false; good catch
Mark Lam
Comment 9 2016-11-28 14:30:44 PST
Thanks for the review. Landed in r209020: <http://trac.webkit.org/r209020>.
Note You need to log in before you can comment on or make changes to this bug.